[package]
name = "my_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../..", features = ["image", "debug","tokio"] }
iced_native = { path = "../../native" }
env_logger = "0.8"
iced_web = "0.4"
wasm-bindgen = "0.2.74"
chrono = "0.4"
tokio-modbus = {version = "*",features = ["sync"] }