[package]
name = "my_test2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../..", features = ["image", "debug"] }
env_logger = "0.8"
iced_web = "0.4"
wasm-bindgen = "0.2.74"
csv = "1.0.0-beta.2"
simple_excel_writer = "0.1.7"