[package]
name = "tour"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
# iced = { git = "https://github.com/iced-rs/iced.git", features = ["tokio", "debug"] }
iced = { path = "../..", features = ["image", "debug"] }
env_logger = "0.8"
iced_web = "0.4"
wasm-bindgen = "0.2.74"